mod:resourcePlugin 检查资源冲突

--- a/android-lib/src/main/res/values/themes.xml
+++ b/android-lib/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources>
 
-    <style name="Theme.PluginDemo.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
+<!--    <style name="Theme.PluginDemo.NoActionBar">-->
+<!--        <item name="windowActionBar">false</item>-->
+<!--        <item name="windowNoTitle">true</item>-->
+<!--    </style>-->
 
     <style name="Theme.PluginDemo.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
