--- a/android-lib2/src/main/res/layout/activity_android_lib.xml
+++ b/android-lib2/src/main/res/layout/activity_android_lib.xml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    tools:context=".AndroidLib2Activity">
 
     <TextView
         android:drawableLeft="@drawable/ic_menu_camera"
-        android:text="lib hello word"
+        android:text="lib2 hello word"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </LinearLayout>
