Feature/resource plugin (#4)
* tracePlugin init:

* mod:resourcePlugin 检查资源冲突

* mod:Drawable 资源重复检查

* mod:drawable 资源重复

* mod:assets 资源重复

* 更新 README

Co-authored-by: 汪奇 <qi.wang@tuya.com>

--- a/app/src/main/res/layout/activity_android_lib.xml
+++ b/app/src/main/res/layout/activity_android_lib.xml
@@ -12,7 +12,7 @@
 
     <TextView
         android:drawableLeft="@drawable/ic_menu_camera"
-        android:text="lib hello word"
+        android:text="main hello word"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </LinearLayout>
